--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,20 @@
     <title>Snake</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="container__inner">
-             <div class="playground">
-                <div class="playground__row">
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                    <div class="playground__cell"></div>
-                </div>
-             </div>
+            <table class="playground">
+                <tbody>
+
+                </tbody>
+            </table>
+            <div class="playground__tooltip">Press ENTER to start</div>
         </div>
     </div>
+
     <script src="js/snake.js"></script>
 </body>
+
 </html>
