--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fontsAwesome/all.min.css">
 </head>
 
 <body>
