new Feature: speed buttons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
                 </tbody>
             </table>   
+            <div class="speed-buttons">
+                <button class="speed-buttons__slow btn">slow</button>
+                <button class="speed-buttons__medium btn btn_active">medium</button>
+                <button class="speed-buttons__fast btn">fast</button>
+            </div>
         </div>
         <div class="playground__tooltip">Press ENTER to start</div>
     </div>
