Addede tooltip for pause game

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
         </div>
         <div class="playground__tooltip">Press ENTER to start</div>
+        <div class="playground__tooltip">Press SPACE to pause and set speed</div>
     </div>
 
     <script src="js/snake.js"></script>
